Bug 399653 - Firmware Updates cannot enable lvfs/lvfs-testing
Summary: Firmware Updates cannot enable lvfs/lvfs-testing
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.14.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-11 11:47 UTC by Bruce Zhang
Modified: 2018-10-16 23:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bruce Zhang 2018-10-11 11:47:16 UTC
SUMMARY


STEPS TO REPRODUCE
1. Uncheck lvfs/lvfs-testing
2. Check again
3. Switch to other page and switch back, it's unchecked.

OBSERVED RESULT
lvfs/lvfs-testing cannot toggle

EXPECTED RESULT
lvfs/lvfs-testing setting normally

SOFTWARE VERSIONS
KDE Plasma Version: 5.14.0
KDE Frameworks Version: 5.50.0
Qt Version: 5.11.2

ADDITIONAL INFORMATION
Nothing
Comment 1 Aleix Pol 2018-10-11 18:03:58 UTC
Git commit b46d113aaf6852cdb5a62e8e78c20562768e5a3e by Aleix Pol.
Committed on 11/10/2018 at 18:03.
Pushed by apol into branch 'Plasma/5.14'.

fwupd: fix source management with older versions of fwupd

M  +11   -10   libdiscover/backends/FwupdBackend/FwupdSourcesBackend.cpp

https://commits.kde.org/discover/b46d113aaf6852cdb5a62e8e78c20562768e5a3e
Comment 2 Neousr 2018-10-15 23:54:27 UTC
I can reproduce this on two neon installs one on 5.14.0 and the other on 5.14.80. Both running Qt 5.11.1 and KDE Frameworks 5.51.0.

While trying to reproduce Bug 399683, i found that once the lfvs toggle is unchecked there is no way to keep the option checked.
Comment 3 Aleix Pol 2018-10-16 12:20:36 UTC
Just merged 5.14 to master and triggered a build for the neon package:
https://build.neon.kde.org/view/3%20unstable%20%E2%98%A3%20git%20master/job/bionic_unstable_kde_plasma-discover/

Please test again making sure the fix is in.
Comment 4 Neousr 2018-10-16 15:18:38 UTC
With the fix on unstable both switches work as expected again.
Comment 5 Aleix Pol 2018-10-16 23:02:51 UTC
Thanks, sorry for the issue.