fwupd: fix source management with older versions of fwupd

BUG: 399653